--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
-    "mocha": "^5.0.5"
+    "mocha": "^5.0.5",
+    "typescript": "^3.4.4"
   },
   "scripts": {
     "test": "mocha",
