--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
     "picklify": "github:lwoites/picklify"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
     "mocha": "^5.0.5",
+    "ts-node": "^8.1.0",
     "typescript": "^3.4.4"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --require ts-node/register test/**/*.ts",
     "eslint": "node_modules/.bin/eslint *.js"
   },
   "author": "",
