--- a/package.json
+++ b/package.json
@@ -15,12 +15,19 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.10.0",
     "mocha": "^5.0.5",
+    "npm-watch": "^0.6.0",
     "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
+    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.4.4"
+  },
+  "watch": {
+    "lint": "modelo/**/*.ts"
   },
   "scripts": {
     "test": "mocha --require ts-node/register test/**/*.ts",
-    "eslint": "node_modules/.bin/eslint *.js"
+    "lint": "tslint --project tsconfig.json --config tslint.json --format codeframe modelo/**/*.ts",
+    "watch": "npm-watch"
   },
   "author": "",
   "license": "ISC"
