--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-plugin-import": "^2.10.0",
     "mocha": "^5.0.5",
     "npm-watch": "^0.6.0",
+    "pre-commit": "^1.2.2",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
@@ -29,6 +30,10 @@
     "lint": "tslint --project tsconfig.json --config tslint.json --format codeframe modelo/**/*.ts",
     "watch": "npm-watch"
   },
+  "pre-commit": [
+    "lint",
+    "test"
+  ],
   "author": "",
   "license": "ISC"
 }
