all tests and linting passing

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@types/uniqid": "^4.1.3",
     "chai": "^4.1.2",
-    "picklify": "github:lwoites/picklify"
+    "picklify": "github:lwoites/picklify",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
@@ -26,7 +28,7 @@
     "lint": "modelo/**/*.ts"
   },
   "scripts": {
-    "test": "mocha --require ts-node/register test/tdd/*.ts",
+    "test": "mocha --require ts-node/register test/**/*.ts",
     "lint": "tslint --project tsconfig.json --config tslint.json --format codeframe modelo/**/*.ts",
     "watch": "npm-watch"
   },
