--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-import": "^2.10.0",
     "mocha": "^5.0.5",
     "npm-watch": "^0.6.0",
+    "nyc": "^14.0.0",
     "pre-commit": "^1.2.2",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
