--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.1",
+    "@types/mongoose": "^5.5.5",
     "@types/uniqid": "^4.1.3",
+    "body-parser": "^1.19.0",
     "chai": "^4.1.2",
+    "express": "^4.17.1",
+    "mongoose": "^5.5.12",
     "picklify": "github:lwoites/picklify",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.6",
+    "@types/mongodb": "^3.1.28",
     "@types/node": "^11.13.6",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
