--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.5.5",
     "@types/uniqid": "^4.1.3",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "chai": "^4.1.2",
     "express": "^4.17.1",
