--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "@types/uniqid": "^4.1.3",
     "chai": "^4.1.2",
+    "express": "^4.17.1",
     "picklify": "github:lwoites/picklify",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "uniqid": "^5.0.3"
   },
   "devDependencies": {
