--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "mongoose": "^5.5.12",
     "picklify": "github:lwoites/picklify",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "uniqid": "^5.0.3"
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
