--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/mongoose": "^5.5.5",
     "@types/uniqid": "^4.1.3",
